@@ -68,12 +68,12 @@ public class Rank9 extends AbstractRank implements Rank {
 		for( int i = 0; i < numWords; i += 8, pos += 2 ) {
 			count[ pos ] = c;
 			c += Fast.count( bits[ i ] );
-			if ( bits[ i ] != 0 ) l = i * 64 + Fast.mostSignificantBit( bits[ i ] );
+			if ( bits[ i ] != 0 ) l = i * 64L + Fast.mostSignificantBit( bits[ i ] );
 			for( int j = 1;  j < 8; j++ ) {
 				count[ pos + 1 ] |= ( i + j <= numWords ? c - count[ pos ] : 0x1FFL ) << 9 * ( j - 1 );
 				if ( i + j < numWords ) {
 					c += Fast.count( bits[ i + j ] );
-					if ( bits[ i + j ] != 0 ) l = ( i + j ) * 64 + Fast.mostSignificantBit( bits[ i + j ] );
+					if ( bits[ i + j ] != 0 ) l = ( i + j ) * 64L + Fast.mostSignificantBit( bits[ i + j ] );
 				}
 			}
 		}
