@@ -4,6 +4,9 @@
   when using more than a billion keys (thanks to Wei Liu for reporting
   and fixing this bug).
 
+- Fixed bug in some rank/select classes that was causing integer overflow
+  errors when building structure over bit vectors with >2Gi bits.
+
 2.0
 
 - General revamp, restructuring, improvements, new coherent names for
